# TalkBot

./: README.md  TODO.md  pyproject.toml
TalkBot/: __init__.py  config.yaml  reader_crops.py  talk.py  test.py
tests/: test_talkbot.py
